examples/test/testpolicy3288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3288
  namespace: namespace257
spec:
  podSelector:
    matchLabels:
      key39: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value42
          key29: value11
          key43: value10
      podSelector:
        matchLabels:
          key6: value23
          key21: value0
          key24: value35
